# scalar

./: .gitattributes  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  task1.py  task2.py  task3.py  task4.py
server/data/: dataset_final.csv
